Fix alignment of latex/mathjax output cells
Addresses alignment bug reported in issue #5276 by using the standard padding for latex outputs.

--- a/packages/mathjax2/style/index.css
+++ b/packages/mathjax2/style/index.css
@@ -5,10 +5,12 @@
 
 /* Left-justify the MathJax preview in cell outputs. */
 .jp-OutputArea-output.jp-RenderedLatex .MathJax_Preview .MJXp-display {
+  padding: var(--jp-code-padding);
   text-align: left !important;
 }
 
 /* Left-justify the MathJax display equation in cell outputs. */
 .jp-OutputArea-output.jp-RenderedLatex .MathJax_Display {
+  padding: var(--jp-code-padding);
   text-align: left !important;
 }
